// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lexical - Lexical > Lexical - Lexical (fail) > (function() { let a; var a; })(); 1`] = `
"SyntaxError [1:26-1:27]: Duplicate binding 'a'
> 1 | (function() { let a; var a; })();
    |                           ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > { let a; { var a; } } 1`] = `
"SyntaxError [1:16-1:17]: Duplicate binding 'a'
> 1 | { let a; { var a; } }
    |                 ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > { let a; let a; } 1`] = `
"SyntaxError [1:14-1:15]: Duplicate binding 'a'
> 1 | { let a; let a; }
    |               ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > { var f; function f() {} } 1`] = `
"SyntaxError [1:18-1:19]: Duplicate binding 'f'
> 1 | { var f; function f() {} }
    |                   ^ Duplicate binding 'f'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > { var f; let f; } 1`] = `
"SyntaxError [1:14-1:15]: Duplicate binding 'f'
> 1 | { var f; let f; }
    |               ^ Duplicate binding 'f'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > { var x } let x; 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | { var x } let x;
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > { var x; } let x 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | { var x; } let x
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const [a, let, b] = [1, 2, 3]; 1`] = `
"SyntaxError [1:13-1:14]: 'A lexical declaration can't define a 'let' binding
> 1 | const [a, let, b] = [1, 2, 3];
    |              ^ 'A lexical declaration can't define a 'let' binding"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const [x, {x}] = y 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | const [x, {x}] = y
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const [x, {x}] = y 2`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | const [x, {x}] = y
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const [x, x] = c 1`] = `
"SyntaxError [1:11-1:12]: Duplicate binding 'x'
> 1 | const [x, x] = c
    |            ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const [x, x] = c 2`] = `
"SyntaxError [1:11-1:12]: Duplicate binding 'x'
> 1 | const [x, x] = c
    |            ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const {a:a, a:a} = {}; 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'a'
> 1 | const {a:a, a:a} = {};
    |                ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const {x:c, y:c} = {}; 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'c'
> 1 | const {x:c, y:c} = {};
    |                ^ Duplicate binding 'c'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const {x:x, x:x} = c 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | const {x:x, x:x} = c
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const {x:x, x:x} = c 2`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | const {x:x, x:x} = c
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = 0, a = 1; 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'a'
> 1 | const a = 0, a = 1;
    |                ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = 1, a = 2 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'a'
> 1 | const a = 1, a = 2
    |                ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = 1; const a = 2 1`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'a'
> 1 | const a = 1; const a = 2
    |                      ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = 1; let a = 2 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'a'
> 1 | const a = 1; let a = 2
    |                    ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = 1; let a = 2 2`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'a'
> 1 | const a = 1; let a = 2
    |                    ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = 1; let a = 2 3`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'a'
> 1 | const a = 1; let a = 2
    |                    ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = b, a = c 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'a'
> 1 | const a = b, a = c
    |                ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = b; const a = c 1`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'a'
> 1 | const a = b; const a = c
    |                      ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = b; const a = c 2`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'a'
> 1 | const a = b; const a = c
    |                      ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = b; let a = c 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'a'
> 1 | const a = b; let a = c
    |                    ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const a = b; let a = c 2`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'a'
> 1 | const a = b; let a = c
    |                    ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const x = a; const x = b; 1`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'x'
> 1 | const x = a; const x = b;
    |                      ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const x = a; const x = b; 2`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'x'
> 1 | const x = a; const x = b;
    |                      ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const x = a; const x = b; 3`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'x'
> 1 | const x = a; const x = b;
    |                      ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const x = a; function x(){}; 1`] = `
"SyntaxError [1:22-1:23]: Duplicate binding 'x'
> 1 | const x = a; function x(){};
    |                       ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const x = x, x = y; 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | const x = x, x = y;
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const x = x, x = y; 2`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | const x = x, x = y;
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const x; { let x; var y; } 1`] = `
"SyntaxError [1:7-1:8]: Missing initializer in const declaration
> 1 | const x; { let x; var y; }
    |        ^ Missing initializer in const declaration"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > const x; { let x; var y; } 2`] = `
"SyntaxError [1:7-1:8]: Missing initializer in const declaration
> 1 | const x; { let x; var y; }
    |        ^ Missing initializer in const declaration"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > for (;;) { var x; } let x; 1`] = `
"SyntaxError [1:25-1:26]: Duplicate binding 'x'
> 1 | for (;;) { var x; } let x;
    |                          ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > for (let x;;) { var x; } 1`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'x'
> 1 | for (let x;;) { var x; }
    |                      ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > for(let let in { }) { }; 1`] = `
"SyntaxError [1:8-1:11]: 'A lexical declaration can't define a 'let' binding
> 1 | for(let let in { }) { };
    |         ^^^ 'A lexical declaration can't define a 'let' binding"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > function f(){let i; class i{}} 1`] = `
"SyntaxError [1:26-1:27]: Duplicate binding 'i'
> 1 | function f(){let i; class i{}}
    |                           ^ Duplicate binding 'i'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let [a, ...a]; 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'a'
> 1 | let [a, ...a];
    |             ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let [a, a] = []; 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'a'
> 1 | let [a, a] = [];
    |          ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(a,b)} = foo 1`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(a,b)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(a,b)} = foo 2`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(a,b)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(a,b)} = foo 3`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(a,b)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(a,b)} = foo 4`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(a,b)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(a,b)} = foo 5`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(a,b)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(a,b)} = foo 6`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(a,b)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(obj)} = foo 1`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(obj)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(obj)} = foo 2`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(obj)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(obj)} = foo 3`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(obj)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...(obj)} = foo 4`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...(obj)} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...[a,b]} = foo 1`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...[a,b]} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...[a,b]} = foo 2`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...[a,b]} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...[a,b]} = foo 3`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...[a,b]} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...[a,b]} = foo 4`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...[a,b]} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...{a,b}} = foo 1`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...{a,b}} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...{a,b}} = foo 2`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...{a,b}} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...{a,b}} = foo 3`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...{a,b}} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...{a,b}} = foo 4`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...{a,b}} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {...{a,b}} = foo 5`] = `
"SyntaxError [1:15-1:16]: The binding declaration is not destructible
> 1 | let {...{a,b}} = foo
    |                ^ The binding declaration is not destructible"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {[a]: x, [b]: x} = obj 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | let {[a]: x, [b]: x} = obj
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {[a]: x, b: x} = obj 1`] = `
"SyntaxError [1:17-1:18]: Duplicate binding 'x'
> 1 | let {[a]: x, b: x} = obj
    |                  ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {a: x, ...{x}} = obj 1`] = `
"SyntaxError [1:16-1:17]: Duplicate binding 'x'
> 1 | let {a: x, ...{x}} = obj
    |                 ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {a: x, ...{x}} = obj 2`] = `
"SyntaxError [1:16-1:17]: Duplicate binding 'x'
> 1 | let {a: x, ...{x}} = obj
    |                 ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {a: x, ...x} = obj 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | let {a: x, ...x} = obj
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {a: x, ...x} = obj 2`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | let {a: x, ...x} = obj
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {a: x, b: x} = obj 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | let {a: x, b: x} = obj
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {a: x, b: x} = obj 2`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | let {a: x, b: x} = obj
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {a: x, c: {b: x}} = obj 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | let {a: x, c: {b: x}} = obj
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {a:a, a:a} = {}; 1`] = `
"SyntaxError [1:13-1:14]: Duplicate binding 'a'
> 1 | let {a:a, a:a} = {};
    |              ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {b, b} = {}; 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'b'
> 1 | let {b, b} = {};
    |          ^ Duplicate binding 'b'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {x, x} = obj 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'x'
> 1 | let {x, x} = obj
    |          ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let {x:c, y:c} = {}; 1`] = `
"SyntaxError [1:13-1:14]: Duplicate binding 'c'
> 1 | let {x:c, y:c} = {};
    |              ^ Duplicate binding 'c'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let a = 1; const a = 2 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'a'
> 1 | let a = 1; const a = 2
    |                    ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let a = b; const a = c 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'a'
> 1 | let a = b; const a = c
    |                    ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let a = b; const a = c 2`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'a'
> 1 | let a = b; const a = c
    |                    ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let a, [a]; 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'a'
> 1 | let a, [a];
    |          ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let a, a 1`] = `
"SyntaxError [1:7-1:8]: Duplicate binding 'a'
> 1 | let a, a
    |        ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let a; export function a(){}; 1`] = `
"SyntaxError [1:23-1:24]: Duplicate binding 'a'
> 1 | let a; export function a(){};
    |                        ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let a; let a;
let a; let a; 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'a'
> 1 | let a; let a;
    |             ^ Duplicate binding 'a'
  2 | let a; let a;"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let a; let a; 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'a'
> 1 | let a; let a;
    |             ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let foo = 1; { var foo = 1; }  1`] = `
"SyntaxError [1:23-1:24]: Duplicate binding 'foo'
> 1 | let foo = 1; { var foo = 1; } 
    |                        ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let foo = 1; function x(foo) {} { var foo = 1; } 1`] = `
"SyntaxError [1:42-1:43]: Duplicate binding 'foo'
> 1 | let foo = 1; function x(foo) {} { var foo = 1; }
    |                                           ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let foo = 1; function x(foo) {} { var foo = 1; } 2`] = `
"SyntaxError [1:42-1:43]: Duplicate binding 'foo'
> 1 | let foo = 1; function x(foo) {} { var foo = 1; }
    |                                           ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let foo = 1; var foo = 1; 1`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'foo'
> 1 | let foo = 1; var foo = 1;
    |                      ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let test = 2, let = 1; 1`] = `
"SyntaxError [1:14-1:17]: 'A lexical declaration can't define a 'let' binding
> 1 | let test = 2, let = 1;
    |               ^^^ 'A lexical declaration can't define a 'let' binding"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x = a; const x = b; 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | let x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x = a; const x = b; 2`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | let x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x = a; const x = b; 3`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | let x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x = a; const x = b; 4`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | let x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x = a; function x(){}; 1`] = `
"SyntaxError [1:20-1:21]: Duplicate binding 'x'
> 1 | let x = a; function x(){};
    |                     ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x = a; let x = b; 1`] = `
"SyntaxError [1:17-1:18]: Duplicate binding 'x'
> 1 | let x = a; let x = b;
    |                  ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x = a; let x = b; 2`] = `
"SyntaxError [1:17-1:18]: Duplicate binding 'x'
> 1 | let x = a; let x = b;
    |                  ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x, {a: {b: x}} = obj 1`] = `
"SyntaxError [1:16-1:17]: Duplicate binding 'x'
> 1 | let x, {a: {b: x}} = obj
    |                 ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x, {a: {x}} = obj 1`] = `
"SyntaxError [1:13-1:14]: Duplicate binding 'x'
> 1 | let x, {a: {x}} = obj
    |              ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x, {a: x} = obj 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | let x, {a: x} = obj
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x, {a: x} = obj 2`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | let x, {a: x} = obj
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x, {x} = obj 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'x'
> 1 | let x, {x} = obj
    |          ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x, {x} = obj 2`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'x'
> 1 | let x, {x} = obj
    |          ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; { var x }
let x; { var x } 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | let x; { var x }
    |                ^ Duplicate binding 'x'
  2 | let x; { var x }"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; { var x } 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | let x; { var x }
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; { var x } 2`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | let x; { var x }
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; { var x } 3`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | let x; { var x }
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; { var x; } 1`] = `
"SyntaxError [1:14-1:15]: Duplicate binding 'x'
> 1 | let x; { var x; }
    |               ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; {var x} 1`] = `
"SyntaxError [1:13-1:14]: Duplicate binding 'x'
> 1 | let x; {var x}
    |              ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; {var x} 2`] = `
"SyntaxError [1:13-1:14]: Duplicate binding 'x'
> 1 | let x; {var x}
    |              ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; for (;;) { var x; } 1`] = `
"SyntaxError [1:23-1:24]: Duplicate binding 'x'
> 1 | let x; for (;;) { var x; }
    |                        ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; var x; 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | let x; var x;
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > let x; var x; 2`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | let x; var x;
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var [{ bar: [foo] }] = x; let {foo} = 1; 1`] = `
"SyntaxError [1:34-1:35]: Duplicate binding 'foo'
> 1 | var [{ bar: [foo] }] = x; let {foo} = 1;
    |                                   ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var [foo] = [1]; let foo = 1; 1`] = `
"SyntaxError [1:25-1:26]: Duplicate binding 'foo'
> 1 | var [foo] = [1]; let foo = 1;
    |                          ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var foo = 1; function x() {} let foo = 1; 1`] = `
"SyntaxError [1:37-1:38]: Duplicate binding 'foo'
> 1 | var foo = 1; function x() {} let foo = 1;
    |                                      ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var foo = 1; function x() {} let foo = 1; 2`] = `
"SyntaxError [1:37-1:38]: Duplicate binding 'foo'
> 1 | var foo = 1; function x() {} let foo = 1;
    |                                      ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var foo = 1; function x(a) { let a; }  1`] = `
"SyntaxError [1:34-1:35]: Duplicate binding 'a'
> 1 | var foo = 1; function x(a) { let a; } 
    |                                   ^ Duplicate binding 'a'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var foo = 1; let foo = 1; 1`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'foo'
> 1 | var foo = 1; let foo = 1;
    |                      ^ Duplicate binding 'foo'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; const x = b; 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | var x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; const x = b; 2`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | var x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; const x = b; 3`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | var x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; const x = b; 4`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | var x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; const x = b; 5`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'x'
> 1 | var x = a; const x = b;
    |                    ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; function x(){}; 1`] = `
"SyntaxError [1:20-1:21]: Duplicate binding 'x'
> 1 | var x = a; function x(){};
    |                     ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; let x = b; 1`] = `
"SyntaxError [1:17-1:18]: Duplicate binding 'x'
> 1 | var x = a; let x = b;
    |                  ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; let x = b; 2`] = `
"SyntaxError [1:17-1:18]: Duplicate binding 'x'
> 1 | var x = a; let x = b;
    |                  ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x = a; let x = b; 3`] = `
"SyntaxError [1:17-1:18]: Duplicate binding 'x'
> 1 | var x = a; let x = b;
    |                  ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x; let x;
var x; let x; 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | var x; let x;
    |             ^ Duplicate binding 'x'
  2 | var x; let x;"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x; let x; 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | var x; let x;
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x; let x; 2`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | var x; let x;
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x; let x; 3`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | var x; let x;
    |             ^ Duplicate binding 'x'"
`;

exports[`Lexical - Lexical > Lexical - Lexical (fail) > var x; let x; 4`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'x'
> 1 | var x; let x;
    |             ^ Duplicate binding 'x'"
`;
